Page Mustang Responsive Option colors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Page Responsive - MUSTANG</title>
+    <script src="trocarimg.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,6 +66,35 @@
    <section class="wraper">
         <div class="container"></div><!--container-->
    </section><!--wraper-->
+
+   <section class="option">
+        <div class="container-colors">
+            <h2>Dísponivel nas Cores</h2>
+            <img src="img/carropreto.jpg" alt="imagem alterada por JS" id="trocarimg">
+        </div><!--container-colors-->
+        <div class="option-colors">
+            <input type="image" id="image" alt="Login"
+            src="img/botaodourado.png" onclick="imgdourado();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaopreto.png" onclick="imgpreto();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaoazul.png" onclick="imgazul();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaocinzver.png" onclick="imgcinzver();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaocinza.png" onclick="imgcinza();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaoroxo.png" onclick="imgroxo();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaobranco.png" onclick="imgbranco();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaoverde.png" onclick="imgverde();">
+            <input type="image" id="image" alt="Login"
+            src="img/botaovermelho.png" onclick="imgvermelho();">
+        </div><!--option-colors-->
+
+        
+   </section><!--option-->
 
     
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
