Page Mustang Responsive Footer

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
         
    </section><!--option-->
 
+   <footer>
+    <div class="end-page">
+        <img class="img-one" src="img/logo.png">
+        <img class="img-two" src="img/ford.png">
+        <h2>Copyright©2001-2022</h2>
+    </div><!--end-page-->
+   </footer>
+
     
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
         <script type="text/javascript">
