Modo respnsivo footer atlz

--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
     <div class="end-page">
         <img class="img-one" src="img/logo.png">
         <img class="img-two" src="img/ford.png">
+    <div class="center-text">   
         <h2><i class="fa fa-phone"></i> (47)99999-9999</h2>
         <h2><i class="fa fa-home"></i> Rua Nova Friburgo,777 -RS</h2>
+    </div>     
     </div><!--end-page-->   
     
     <div class="descriptions">
