Atualização Footer comentário

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="center-text">   
         <h2><i class="fa fa-phone"></i> (47)99999-9999</h2>
         <h2><i class="fa fa-home"></i> Rua Nova Friburgo,777 -RS</h2>
-    </div>     
+    </div><!--center-text-->  
     </div><!--end-page-->   
     
     <div class="descriptions">
